[tool.poetry]
name = "patient-medication"
version = "0.1.0"
description = ""
authors = ["Angelo Caldeira <angelo.josey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
